# txm

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
bindings/py/: Cargo.toml  README.md  pyproject.toml
bindings/py/src/: lib.rs
src/: ast.rs  backend.rs  buffer.rs  error.rs  glyph.rs  layout.rs  layout_tree.rs  lib.rs  main.rs  parser.rs  ratatui.rs  render.rs  style.rs  token.rs
src/backends/: generic_backend.rs  mod.rs  terminal.rs
tests/: smoke.rs
