[package]
name = "txm"
version = "0.1.5"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Terminal math rendering engine"
authors = ["thatmagicalcat <thatmagicalcat@hotmail.com>"]
repository = "https://github.com/thatmagicalcat/txm"
readme = "README.md"

[dependencies]
logos = "0.16"
thiserror = "2"
unicode-width = "0.2"

ratatui-core = { version = "0.1", optional = true }

[features]
default = []
ratatui = ["dep:ratatui-core"]
