[package]
name = "txm-py"
version = "0.1.1"
edition = "2024"
description = "Python bindings for TXM, a terminal math rendering engine."
license = "MIT OR Apache-2.0"
repository = "https://github.com/thatmagicalcat/txm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "txm"
crate-type = ["cdylib"]

[workspace]

[dependencies]
pyo3 = "0.29.0"
libtxm = { package = "txm", path = "../.." }
